# python-simple-ecs

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: GraphicsSystem.py  PhysicsSystem.py  PygameECSExample1.py  PygameECSExample2.py  SpriteComponent.py  TransformComponent.py
examples/: GraphicsSystem.py  PygameECSExample1.py  SpriteComponent.py  TransformComponent.py
src/ecs/: Component.py  ComponentManager.py  Entity.py  EntityManager.py  Globals.py  Scene.py  System.py  __init__.py
src/specs/: Component.py  ComponentManager.py  Entity.py  EntityManager.py  Globals.py  Scene.py  System.py  __init__.py
