[project]
name = "simple-ecs"
version = "0.0.1"
authors = [
  { name="Rik Cross", email="rik.j.cross@gmail.com" },
]
description = "A simple to use Python ECS library."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

